--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -35,7 +35,7 @@
     <div class="container">
       <nav class="js-mega-menu navbar-nav-wrap">
         <!-- Default Logo -->
-        <a class="navbar-brand" href="/index.html" aria-label="Front">
+        <a class="navbar-brand" href="{% url "website:home" %}" aria-label="Front">
           <img class="navbar-brand-logo" src="{% static 'svg/logos/logo.svg'%}" alt="Logo">
         </a>
         <!-- End Default Logo -->
@@ -56,77 +56,20 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="/index.html">صفحه اصلی</a>
+              <a class="nav-link active" href="{% url "website:home" %}">صفحه اصلی</a>
             </li>
-
-            <!-- Dropdown -->
-            <li class="hs-has-sub-menu nav-item">
-              <a id="listingsDropdown" class="hs-mega-menu-invoker nav-link dropdown-toggle " href="#" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">لیست محصولات</a>
-              <div class="hs-sub-menu dropdown-menu" aria-labelledby="listingsDropdown" style="min-width: 14rem;">
-                <a class="dropdown-item " href="/products-list.html">فهرست</a>
-                <a class="dropdown-item " href="/products-grid.html">فهرست (شبکه)</a>
-              </div>
-            </li>
-            <!-- End Dropdown -->
 
             <li class="nav-item">
-              <a class="nav-link " href="/product-overview.html">بررسی اجمالی محصولات</a>
+              <a class="nav-link " href="{% url "shop:product_list" %}">لیست محصولات</a>
             </li>
-
+            <li class="nav-item">
+              <a class="nav-link " href="{% url "website:about" %}"> درباره ما </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="{% url "website:contact" %}"> ارتباط با ما</a>
+            </li>
             <!-- Pages -->
-            <li class="hs-has-mega-menu nav-item" data-hs-mega-menu-item-options='{
-                  "desktop": {
-                    "position": "right",
-                    "maxWidth": "27rem"
-                  }
-                }'>
-              <a id="pagesMegaMenu" class="hs-mega-menu-invoker nav-link dropdown-toggle " aria-current="page" href="#"
-                role="button" data-bs-toggle="dropdown" aria-expanded="false">صفحات</a>
 
-              <!-- Mega Menu -->
-              <div class="hs-mega-menu dropdown-menu" aria-labelledby="pagesMegaMenu" style="min-width: 27rem;">
-                <div class="navbar-dropdown-menu-inner">
-                  <span class="dropdown-header">عناصر</span>
-
-                  <div class="row">
-                    <div class="col-sm mb-3 mb-sm-0">
-                      <a class="dropdown-item " href="/categories.html">دسته بندی ها</a>
-                      <a class="dropdown-item " href="/categories-sidebar.html">نوار کناری دسته ها</a>
-                      <a class="dropdown-item " href="/empty-cart.html">سبد خالی</a>
-                    </div>
-                    <!-- End Col -->
-
-                    <div class="col-sm">
-                      <a class="dropdown-item " href="/cart.html">سبد خرید</a>
-                      <a class="dropdown-item " href="/checkout.html">بررسی</a>
-                      <a class="dropdown-item " href="/order-completed.html">سفارش تکمیل شد</a>
-                    </div>
-                    <!-- End Col -->
-                  </div>
-                  <!-- End Row -->
-                </div>
-
-                <!-- Mega Menu Banner -->
-                <div class="navbar-dropdown-menu-shop-banner">
-                  <div class="d-flex">
-                    <div class="flex-shrink-0">
-                      <img class="navbar-dropdown-menu-shop-banner-img" src="{% static 'img/mockups/img4.png'%}"
-                        alt="Image Description">
-                    </div>
-
-                    <div class="flex-grow-1 p-4">
-                      <span class="h4 d-block text-primary">برنده تی شرت</span>
-                      <p>یکی از تی شرت های برند Front ما را برنده شوید.</p>
-                      <a class="btn btn-sm btn-soft-primary btn-transition" href="/index.html">بیشتر بدانید <i
-                          class="bi-chevron-left small"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <!-- End Mega Menu Banner -->
-              </div>
-              <!-- End Mega Menu -->
-            </li>
             <!-- End Pages -->
 
             <li class="nav-item">
@@ -145,7 +88,25 @@
               </button>
               <!-- End Shopping Cart -->
 
-              <a class="btn btn-primary btn-transition" href="{% url 'accounts:login' %}">ورود</a>
+              {% if user.is_authenticated %}
+                <div class="nav-item dropdown">
+                  <a class="btn btn-primary btn-transition dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    {{ user.email }}
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="{% url 'accounts:account' %}">حساب من</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li>
+                      <form method="post" action="{% url 'accounts:logout' %}" style="display: inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="dropdown-item">خروج</button>
+                      </form>
+                    </li>
+                  </ul>
+                </div>
+              {% else %}
+                <a class="btn btn-primary btn-transition" href="{% url 'accounts:login' %}">ورود</a>
+              {% endif %}
             </li>
           </ul>
         </div>
@@ -167,7 +128,7 @@
         <div class="col-lg-3 mb-5">
           <div class="d-flex align-items-start flex-column h-100">
             <!-- Logo -->
-            <a class="w-100 mb-3 mb-lg-auto" href="/index.html" aria-label="Front">
+            <a class="w-100 mb-3 mb-lg-auto" href="{% url "website:home" %}" aria-label="Front">
               <img class="brand" src="{% static 'svg/logos/logo.svg'%}" alt="Logo">
             </a>
             <!-- End Logo -->
@@ -338,14 +299,14 @@
 
           <div class="mb-7">
             <!-- Form -->
-            <form>
+            <form action="{% url "shop:product_list" %}" method="get">
               <!-- Input Card -->
               <div class="input-card">
                 <div class="input-card-form">
-                  <input type="text" class="form-control form-control-lg" placeholder="جستجو محصولات"
+                  <input type="text" class="form-control form-control-lg" name='search' placeholder="جستجو محصولات"
                     aria-label="جستجو محصولات">
                 </div>
-                <button type="button" class="btn btn-primary btn-lg">جستجو کردن</button>
+                <button type="submit" class="btn btn-primary btn-lg">جستجو کردن</button>
               </div>
               <!-- End Input Card -->
             </form>
