--- a/core/templates/shop/product_list.html
+++ b/core/templates/shop/product_list.html
@@ -241,7 +241,7 @@
                   </a>
                   <!-- End Rating -->
 
-                  <button type="button" class="btn btn-outline-primary btn-sm btn-transition rounded-pill">افزودن به سبد خرید</button>
+                  <button onclick="add_cart_item({{product.id}}, 1)" type="button" class="btn btn-outline-primary btn-sm btn-transition rounded-pill">افزودن به سبد خرید</button>
                 </div>
               </div>
               <!-- End Card -->
