--- a/core/templates/website/home.html
+++ b/core/templates/website/home.html
@@ -22,6 +22,8 @@
                   </div>
 
                   <div class="d-flex gap-2">
+                    <!-- مثال -->
+                  <span>{{ test }} items in cart</span>
                     <a class="btn btn-primary rounded-pill" href="#">نمایش جزئیات محصول</a>
                   </div>
                 </div>
