Create App dashboard v4

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,6 +10,9 @@
   <!-- Title -->
   <title>{% block title %}{% endblock title %}</title>
 
+  <!-- Base URL -->
+  <base href="/">
+
   <!-- Favicon -->
   <link rel="shortcut icon" href="/favicon.ico">
 
