--- a/core/templates/dashboard/admin/sidebar.html
+++ b/core/templates/dashboard/admin/sidebar.html
@@ -10,8 +10,9 @@
                   <!-- Avatar -->
                   <div class="d-none d-lg-block text-center mb-5">
                     <div class="avatar avatar-xxl avatar-circle mb-3">
+                      {% if request.user.user_profile.image %}
                       <img class="avatar-img" src="{{ request.user.user_profile.image.url }}" alt="Image Description">
-                      
+                      {% endif %}
                     </div>
 
                     <h4 class="card-title mb-0">{{request.user.user_profile.first_name}} {{request.user.user_profile.last_name}}</h4>
@@ -43,29 +44,47 @@
                   </ul>
                   <!-- End List -->
 
-                  <span class="text-cap">خريد كردن</span>
+                  
+                  <span class="text-cap">فروشگاه</span>
 
                   <!-- List -->
                   <ul class="nav nav-sm nav-tabs nav-vertical mb-4">
                     <li class="nav-item">
-                      <a class="nav-link " href="./account-orders.html">
-                        <i class="bi-basket nav-icon"></i> سفارشات شما
+                      <a class="nav-link " href="./admin-account-products.html">
+                        <i class="bi-shop-window nav-icon"></i> محصولات
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link " href="./account-wishlist.html">
-                        <i class="bi-heart nav-icon"></i>لیست علایق<span
-                          class="badge bg-soft-dark text-dark rounded-pill nav-link-badge">2</span>
+                      <a class="nav-link " href="./admin-account-order.html">
+                        <i class="bi-receipt-cutoff nav-icon"></i> سفارشات
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link " href="./admin-account-support.html">
+                        <i class="bi-envelope nav-icon"></i> تیکت ها
                       </a>
                     </li>
 
+
+                  </ul>
+
+                  <span class="text-cap">کاربران</span>
+
+                   <!-- List -->
+                   <ul class="nav nav-sm nav-tabs nav-vertical mb-4">
                     <li class="nav-item">
-                      <a class="nav-link " href="./account-address.html">
-                        <i class="bi-geo-alt nav-icon"></i> نشانی
+                      <a class="nav-link " href="./admin-account-users.html">
+                        <i class="bi-person nav-icon"></i> لیست کاربران
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link " href="./admin-account-newsletter.html">
+                        <i class="bi-newspaper nav-icon"></i> خبرنامه
                       </a>
                     </li>
 
                   </ul>
+
                   <!-- End List -->
 
                   <div class="d-lg-none">
@@ -89,3 +108,4 @@
           </div>
           <!-- End Navbar -->
         </div>
+        <!-- End Col -->
