--- a/core/templates/dashboard/customer/profile_edit.html
+++ b/core/templates/dashboard/customer/profile_edit.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/admin/base.html" %}
+{% extends "dashboard/customer/base.html" %}
 {% load static %}
 
 {% block content2 %}
@@ -22,14 +22,13 @@
 
                     <div class="col-sm-9">
                       <!-- Media -->
-                       <form action="{% url "dashboard:admin:profile-image-edit" %}" method="post" enctype="multipart/form-data">
+                       <form action="{% url "dashboard:customer:profile-image-edit" %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                       <div class="d-flex align-items-center">
                         <!-- Avatar -->
                         <label class="avatar avatar-xl avatar-circle" for="avatarUploader">
-                      {% if request.user.user_profile.image %}
-                      <img class="avatar-img" src="{{ request.user.user_profile.image.url }}" alt="Image Description">
-                      {% endif %}
+                          <img  id="avatarImg" class="avatar-img" src="{{ request.user.user_profile.image.url }}"
+                            alt="Image Description">
                         </label>
 
                         <div class="d-grid d-sm-flex gap-2 me-4">
