--- a/core/templates/dashboard/admin/sidebar.html
+++ b/core/templates/dashboard/admin/sidebar.html
@@ -55,7 +55,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link " href="./admin-account-order.html">
+                      <a class="nav-link " href="{% url "dashboard:admin:order-list" %}">
                         <i class="bi-receipt-cutoff nav-icon"></i> سفارشات
                       </a>
                     </li>
@@ -73,7 +73,7 @@
                    <!-- List -->
                    <ul class="nav nav-sm nav-tabs nav-vertical mb-4">
                     <li class="nav-item">
-                      <a class="nav-link " href="./admin-account-users.html">
+                      <a class="nav-link " href="{% url "dashboard:admin:user-list" %}">
                         <i class="bi-person nav-icon"></i> لیست کاربران
                       </a>
                     </li>
