--- a/core/templates/dashboard/customer/sidebar.html
+++ b/core/templates/dashboard/customer/sidebar.html
@@ -54,7 +54,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link " href="./account-wishlist.html">
+                      <a class="nav-link " href="{% url "dashboard:customer:wishlist" %}">
                         <i class="bi-heart nav-icon"></i>لیست علایق<span
                           class="badge bg-soft-dark text-dark rounded-pill nav-link-badge">2</span>
                       </a>
