--- a/core/templates/dashboard/admin/sidebar.html
+++ b/core/templates/dashboard/admin/sidebar.html
@@ -64,6 +64,11 @@
                         <i class="bi-envelope nav-icon"></i> تیکت ها
                       </a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link " href="{% url "dashboard:admin:review-list" %}">
+                         <i class="bi-star nav-icon"></i> نظرات
+                      </a>
+                    </li>
 
 
                   </ul>
